--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -37,6 +37,10 @@
       label {
         display: block;
         margin-top: 1rem;
+        input{
+          padding: 5px;
+          margin-left: 10px;
+        }
       }
 
       button {
