--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -4,11 +4,12 @@
   .container {
     display: flex;
     flex-direction: row;
+    justify-content:space-between ;
+    gap: 20px;
     padding: 2rem;
-  
 
   .file-upload {
-    width: 40%;
+    width: 50%;
     .dropzone {
       width: 100%;
       padding: 2rem;
@@ -44,6 +45,7 @@
 
     button {
       margin-top: 1rem;
+      margin: 2rem;
       padding: 0.5rem 1rem;
       background-color: #007bff;
       color: #fff;
@@ -55,6 +57,39 @@
         background-color: #0056b3;
       }
     }
+      .summary-text {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0;
+        
+        label {
+          font-size: 1.2rem; 
+          color: #555;
+          margin-bottom: 8px; 
+        }
+
+        input {
+          padding: 12px; 
+          font-size: 1rem; 
+          margin-top: 1rem;
+          border: 1px solid #ccc;
+          border-radius: 8px;
+          transition: border-color 0.3s ease, box-shadow 0.3s ease; 
+
+          &:focus {
+            outline: none;
+            border-color: #2980b9; 
+            box-shadow: 0 0 5px rgba(41, 128, 185, 0.5); 
+          }
+
+          &::placeholder {
+            color: #aaa;
+            font-style: italic; 
+          }
+        }
+      }
+
     .file-preview {
       text-align: left;
       padding: 2rem;
@@ -62,6 +97,7 @@
       border: 1px solid #ccc;
       border-radius: 10px;
       background-color: #f9f9f9;
+      overflow-y: auto;
   
       img {
         max-width: 100%;
@@ -80,8 +116,10 @@
   .display-result{
     width: 50%;
     padding: 20px;
-    margin-left: 40px;
-   
+    margin-left: 50px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 10px;
   }
   }
   
