--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -93,6 +93,7 @@
     .file-preview {
       text-align: left;
       padding: 2rem;
+      height: 50%;
       margin-top: 10px;
       border: 1px solid #ccc;
       border-radius: 10px;
