--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -3,7 +3,7 @@
     color: white;
     padding: 1rem;
     text-align: center;
-    position: fixed;
     width: 100%;
+    height: 5vh;
     bottom: 0;
   }
