speech option added

--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -15,7 +15,7 @@
       justify-self: center;
       justify-content: center;
       align-items: center;
-      width: 80%;
+      width: 85%;
       height: 9vh;
       padding: 2rem;
       border: 2px dashed #ccc;
@@ -98,7 +98,6 @@
     .file-preview {
       text-align: left;
       padding: 2rem;
-      height: 40%;
       margin-top: 10px;
       border: 1px solid #ccc;
       border-radius: 10px;
@@ -147,6 +146,7 @@
 }
   .display-result{
     width: 50%;
+    text-align: left;
     padding: 20px;
     margin-left: 50px;
     background-color: #f9f9f9;
