--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -98,6 +98,7 @@
     .file-preview {
       text-align: left;
       padding: 2rem;
+      min-height: 30vh;
       margin-top: 10px;
       border: 1px solid #ccc;
       border-radius: 10px;
